<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aprs_fr3_testing</name>
  <version>0.0.0</version>
  <description>Package for working with the FR3 in the APRS Lab</description>
  <maintainer email="justin.albrecht@nist.gov">Justin Albrecht</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>orocos_kdl</depend>
  <depend>python3-pykdl</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
